--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,10 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
+theme = "gohugo-theme-ananke"
+
+
+
+[params]
+text_color = "green"
+site_logo = "img/logo.svg"
